{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 83,
  "lineage": "92df1548-ce18-0682-b734-8595f3a1fcd1",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d41e3cd9e437539f",
            "arn": "arn:aws:ec2:us-east-1:533267208345:elastic-ip/eipalloc-0d41e3cd9e437539f",
            "association_id": "eipassoc-05e07e55bd34cf7db",
            "domain": "vpc",
            "id": "eipalloc-0d41e3cd9e437539f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-094f2f66fab8733bf",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-54-162-127-114.compute-1.amazonaws.com",
            "public_ip": "54.162.127.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-eip-1"
            },
            "tags_all": {
              "Name": "prod-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cabf6a63710e53f",
            "arn": "arn:aws:ec2:us-east-1:533267208345:elastic-ip/eipalloc-02cabf6a63710e53f",
            "association_id": "eipassoc-0bc7f59982aee773d",
            "domain": "vpc",
            "id": "eipalloc-02cabf6a63710e53f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-013126799dcc6e4ca",
            "private_dns": "ip-10-0-2-22.ec2.internal",
            "private_ip": "10.0.2.22",
            "public_dns": "ec2-18-233-201-190.compute-1.amazonaws.com",
            "public_ip": "18.233.201.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-eip-2"
            },
            "tags_all": {
              "Name": "prod-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:internet-gateway/igw-09243305289918cf2",
            "id": "igw-09243305289918cf2",
            "owner_id": "533267208345",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "dependencies": [
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d41e3cd9e437539f",
            "association_id": "eipassoc-05e07e55bd34cf7db",
            "connectivity_type": "public",
            "id": "nat-0f8f5e86caa8958b0",
            "network_interface_id": "eni-094f2f66fab8733bf",
            "private_ip": "10.0.1.109",
            "public_ip": "54.162.127.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027ab7b1968e8cbfe",
            "tags": {
              "Name": "prod-nat-gtw-1"
            },
            "tags_all": {
              "Name": "prod-nat-gtw-1"
            }
          },
          "dependencies": [
            "module.eks.aws_eip.nat_gtw",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cabf6a63710e53f",
            "association_id": "eipassoc-0bc7f59982aee773d",
            "connectivity_type": "public",
            "id": "nat-0a5090b69124bf1f6",
            "network_interface_id": "eni-013126799dcc6e4ca",
            "private_ip": "10.0.2.22",
            "public_ip": "18.233.201.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-085108eb7ba754239",
            "tags": {
              "Name": "prod-nat-gtw-2"
            },
            "tags_all": {
              "Name": "prod-nat-gtw-2"
            }
          },
          "dependencies": [
            "module.eks.aws_eip.nat_gtw",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:route-table/rtb-03004f3f8cad3f124",
            "id": "rtb-03004f3f8cad3f124",
            "owner_id": "533267208345",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f8f5e86caa8958b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-rtb-1"
            },
            "tags_all": {
              "Name": "prod-private-rtb-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eip.nat_gtw",
            "module.eks.aws_nat_gateway.nat_gtw",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:route-table/rtb-0c27005de56f76c40",
            "id": "rtb-0c27005de56f76c40",
            "owner_id": "533267208345",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a5090b69124bf1f6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-rtb-2"
            },
            "tags_all": {
              "Name": "prod-private-rtb-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eip.nat_gtw",
            "module.eks.aws_nat_gateway.nat_gtw",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:route-table/rtb-02ff552f89f23fd72",
            "id": "rtb-02ff552f89f23fd72",
            "owner_id": "533267208345",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09243305289918cf2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082c0ac25dcde5c02",
            "route_table_id": "rtb-03004f3f8cad3f124",
            "subnet_id": "subnet-0ebd681b9d37a48e5"
          },
          "dependencies": [
            "module.eks.aws_eip.nat_gtw",
            "module.eks.aws_nat_gateway.nat_gtw",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private_subnet",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4052c119f2b2a29",
            "route_table_id": "rtb-0c27005de56f76c40",
            "subnet_id": "subnet-0246fa486ef130476"
          },
          "dependencies": [
            "module.eks.aws_eip.nat_gtw",
            "module.eks.aws_nat_gateway.nat_gtw",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private_subnet",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0affd2c8dd63c9535",
            "route_table_id": "rtb-02ff552f89f23fd72",
            "subnet_id": "subnet-027ab7b1968e8cbfe"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0208c9a65a27785d4",
            "route_table_id": "rtb-02ff552f89f23fd72",
            "subnet_id": "subnet-085108eb7ba754239"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.main",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:security-group/sg-03a7a6ff0113b34b9",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a7a6ff0113b34b9",
            "ingress": [],
            "name": "prod-cluster20250219083617621000000007",
            "name_prefix": "prod-cluster",
            "owner_id": "533267208345",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-cluster"
            },
            "tags_all": {
              "Name": "SG-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:security-group/sg-00a1607f57f86c2ae",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00a1607f57f86c2ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "158.181.157.142/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-worker-sg-mgmt20250219083617624700000008",
            "name_prefix": "prod-worker-sg-mgmt",
            "owner_id": "533267208345",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-75883524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03a7a6ff0113b34b9",
            "security_group_rule_id": "sgr-0a54fe8ef41e30b1c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:subnet/subnet-0ebd681b9d37a48e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebd681b9d37a48e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267208345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-1",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "prod-private-1",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:subnet/subnet-0246fa486ef130476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0246fa486ef130476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267208345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-2",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "prod-private-2",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:subnet/subnet-027ab7b1968e8cbfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027ab7b1968e8cbfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267208345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-1",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-public-1",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:subnet/subnet-085108eb7ba754239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085108eb7ba754239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267208345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-2",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "prod-public-2",
              "kubernetes.io/cluster/prod-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "dependencies": [
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:vpc/vpc-0858602b5050b1521",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ab45bd66be09272",
            "default_route_table_id": "rtb-003c683c7e4fb1c4c",
            "default_security_group_id": "sg-098928e0e0e0787dd",
            "dhcp_options_id": "dopt-00a8af9aa62ea9a35",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0858602b5050b1521",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003c683c7e4fb1c4c",
            "owner_id": "533267208345",
            "tags": {
              "Name": "prod-vpc-prod"
            },
            "tags_all": {
              "Name": "prod-vpc-prod"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a03a3f879cd6676e",
            "arn": "arn:aws:ec2:us-east-1:533267208345:elastic-ip/eipalloc-0a03a3f879cd6676e",
            "association_id": "eipassoc-0c9b50b271506ad63",
            "domain": "vpc",
            "id": "eipalloc-0a03a3f879cd6676e",
            "instance": "i-098963cdcbe8fea39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dc332fbde09d2246",
            "private_dns": "ip-10-0-1-73.ec2.internal",
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-3-83-196-127.compute-1.amazonaws.com",
            "public_ip": "3.83.196.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web-eip-1"
            },
            "tags_all": {
              "Name": "web-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available",
            "module.rds.aws_instance.web_server",
            "module.rds.aws_key_pair.my_key_pair",
            "module.rds.aws_security_group.web_sg",
            "module.rds.data.aws_ami.latest_ubuntu",
            "module.rds.tls_private_key.my_key_pair"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c78647b95a018b6",
            "arn": "arn:aws:ec2:us-east-1:533267208345:instance/i-098963cdcbe8fea39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098963cdcbe8fea39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc332fbde09d2246",
            "private_dns": "ip-10-0-1-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.73",
            "public_ip": "3.83.196.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3b9cdd1e477e797",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027ab7b1968e8cbfe",
            "tags": {
              "Name": "prod-web-instance-1"
            },
            "tags_all": {
              "Name": "prod-web-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b855e007534dbb26"
            ]
          },
          "dependencies": [
            "module.eks.aws_subnet.public_subnet",
            "module.eks.aws_vpc.main",
            "module.eks.data.aws_availability_zones.available",
            "module.rds.aws_key_pair.my_key_pair",
            "module.rds.aws_security_group.web_sg",
            "module.rds.data.aws_ami.latest_ubuntu",
            "module.rds.tls_private_key.my_key_pair"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:security-group/sg-0ac171f66c1f0dca4",
            "description": "Securtiy Group for Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac171f66c1f0dca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "main-rds-sg",
            "name_prefix": "",
            "owner_id": "533267208345",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-prod-rds-postgres"
            },
            "tags_all": {
              "Name": "sg-prod-rds-postgres"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267208345:security-group/sg-0b855e007534dbb26",
            "description": "Security Group for Web Servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b855e007534dbb26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "212.42.127.54/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-security-group",
            "name_prefix": "",
            "owner_id": "533267208345",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg"
            },
            "tags_all": {
              "Name": "prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0858602b5050b1521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}